# Hospital-MultiAgentLLMLangchain

./: README.md  pyproject.toml
assets/: Screen Recording 2024-08-03 at 17.41.15.MOV
data/pacientes/: david garcia.txt  jessika marisca.txt  jose garcia.txt  juan pérez garcía.txt  paciente1.txt  paciente2.txt  paciente3.txt  paciente4.txt  paciente5.txt  stephani vilchez.txt  stephani.txt
notebooks/: demoMultiAgent.ipynb
src/: app.py  main.py
src/agents/: hospital_agent.py
src/features/: admin_agent.py  doctor_agent.py  hospital_tools.py  nurse_agent.py  patient_rag.py
src/models/: input_models.py
src/utils/: logging_config.py
