[tool.poetry]
name = "hospitalmultiagentllmlangchain"
version = "0.1.0"
description = ""
authors = ["Adrian Infantes <infantesromeroadrian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
llama-agents = "^0.0.12"
duckduckgo-search = "^6.2.6"
langchain-community = "^0.2.11"
accelerate = "^0.33.0"
langchain = "^0.2.12"
langchain-openai = "^0.1.20"
python-dotenv = "^1.0.1"
chromadb = "^0.5.5"
langchainhub = "^0.1.20"
streamlit = "^1.37.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
